スライドショー

--- a/app/views/tests/top.html.erb
+++ b/app/views/tests/top.html.erb
@@ -1,2 +1,14 @@
-<h1>Tests#top</h1>
-<p>Find me in app/views/tests/top.html.erb</p>
+<h1 class="jquery">スライドのビューを作りたい。</h1>
+<h2 class="message">https://releases.jquery.com/</h2>
+
+<h2>スライドの要</h2>
+<h2>https://kenwheeler.github.io/slick/</h2>
+<div id="key_visual">
+  <div class="slider">
+    <div><%= image_tag 'nature-1.jpg' %></div>
+    <div><%= image_tag 'nature-2.jpg' %></div>
+    <div><%= image_tag 'nature-3.jpg' %></div>
+    <div><%= image_tag 'nature-4.jpg' %></div>
+    <div><%= image_tag 'nature-5.jpg' %></div>
+  </div>
+</div>
