スライドの矢印を非表示にする

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,7 +31,10 @@
           alert("かんばれよ！！");
         });
       //スライドショー
-        $('.slider').slick();
+        $('.slider').slick({
+            //スライドの矢印を非表示にする
+            arrows: false
+        });
       });
     </script>
   </body>
