ドットの表示

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,7 +33,9 @@
       //スライドショー
         $('.slider').slick({
             //スライドの矢印を非表示にする
-            arrows: false
+            arrows: false,
+            //ドットを表示させる
+            dots: true
         });
       });
     </script>
