スライドを自動で動かす

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,7 +35,13 @@
             //スライドの矢印を非表示にする
             arrows: false,
             //ドットを表示させる
-            dots: true
+            dots: true,
+            //スライドショーの自動再生(カーソルが画像の上に乗るとスライドショーが止まる)
+            autoplay: true,
+            //マウスオーバー（マウスが上に乗っている状態）時もスライドを動かす　trueだと止まる
+            pauseOnHover: false,
+            //自動再生のスピード(1000→1秒、3000→3秒)
+            autoplaySpeed: 1000,
         });
       });
     </script>
