画像を入れ、サイズの調整

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,15 +37,15 @@
             //ドットを表示させる
             dots: true,
             //一度に表示するスライドの枚数を変更、今回は一度に３枚
-            //slidesToShow: 3,
+            slidesToShow: 3,
             //一度にスクロールするスライドの枚数を指定、今回は一度に３枚
-            //slidesToScroll: 3,
+            slidesToScroll: 3,
             //スライドショーの自動再生(カーソルが画像の上に乗るとスライドショーが止まる)
             autoplay: true,
             //マウスオーバー（マウスが上に乗っている状態）時もスライドを動かす　trueだと止まる
             pauseOnHover: false,
             //自動再生のスピード(1000→1秒、3000→3秒)
-            autoplaySpeed: 8000,
+            autoplaySpeed: 1000,
         });
       });
     </script>
