--- a/app/views/tests/top.html.erb
+++ b/app/views/tests/top.html.erb
@@ -10,5 +10,15 @@
     <div><%= image_tag 'nature-3.jpg' %></div>
     <div><%= image_tag 'nature-4.jpg' %></div>
     <div><%= image_tag 'nature-5.jpg' %></div>
+    <div><%= image_tag 'airport.jpg' %></div>
+    <div><%= image_tag 'asia.jpg' %></div>
+    <div><%= image_tag 'box1.jpg' %></div>
+    <div><%= image_tag 'box2.jpg' %></div>
+    <div><%= image_tag 'box3.jpg' %></div>
+    <div><%= image_tag 'box4.1.jpg' %></div>
+    <div><%= image_tag 'desert.jpg' %></div>
+    <div><%= image_tag 'japan.jpg' %></div>
+    <div><%= image_tag 'italy.jpg' %></div>
+    <div><%= image_tag 'japan2.jpg' %></div>
   </div>
 </div>
